Gap fixed

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     display: block;
     position: absolute;
     top: 75%;
-    width: 100%;
+    width: 95%;
     text-align: center;
     font-size: 18px;
     font-family: 'Red Hat Display', sans-serif;
@@ -42,7 +42,7 @@
 .top3 .item .pic {
     position: absolute;
     top: -2rem;
-    left: 2.5rem;
+    left: 2rem;
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
@@ -81,7 +81,7 @@
 .top3 .item.one .pic {
     width: 5rem;
     height: 5rem;
-    left: 2.5rem;
+    left: 2rem;
 }
 
 .top3 .item:hover {
